--- a/index.html
+++ b/index.html
@@ -26,10 +26,22 @@
 </head>
 
 <body>
-    <header class="bg-amber-100 py-20 px-4 md:p-32">
+    <header class="bg-[#FFFBF0] py-20 px-4 md:p-32">
         <!-- nav section -->
-        <nav>
-
+        <nav class="flex justify-between items-center pb-6">
+            <img class="w-72" src="icons/logo.png" alt="">
+            <svg class="size-8 md:hidden" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" fill="none">
+                <path d="M5 16.25C5.69036 16.25 6.25 15.6904 6.25 15C6.25 14.3096 5.69036 13.75 5 13.75C4.30964 13.75 3.75 14.3096 3.75 15C3.75 15.6904 4.30964 16.25 5 16.25Z" fill="black"/>
+                <path d="M25.075 13.75H9.925C9.27607 13.75 8.75 14.2761 8.75 14.925V15.075C8.75 15.7239 9.27607 16.25 9.925 16.25H25.075C25.7239 16.25 26.25 15.7239 26.25 15.075V14.925C26.25 14.2761 25.7239 13.75 25.075 13.75Z" fill="black"/>
+                <path d="M25.075 20H4.925C4.27607 20 3.75 20.5261 3.75 21.175V21.325C3.75 21.9739 4.27607 22.5 4.925 22.5H25.075C25.7239 22.5 26.25 21.9739 26.25 21.325V21.175C26.25 20.5261 25.7239 20 25.075 20Z" fill="black"/>
+                <path d="M25.075 7.5H4.925C4.27607 7.5 3.75 8.02607 3.75 8.675V8.825C3.75 9.47393 4.27607 10 4.925 10H25.075C25.7239 10 26.25 9.47393 26.25 8.825V8.675C26.25 8.02607 25.7239 7.5 25.075 7.5Z" fill="black"/>
+            </svg>
+            <ul class="hidden md:flex gap-14 justify-around list-none font-roboto text-[#3C3C3C] font-medium">
+                <li><a href="">Home</a></li>
+                <li><a href="">Product</a></li>
+                <li><a href="">About us</a></li>
+                <li><a href="">Contact us</a></li>
+            </ul>
         </nav>
         <!-- banner section -->
         <div class="flex flex-col md:flex-row justify-between items-center">
@@ -55,8 +67,8 @@
     </header>
     <main class="max-w-7xl mx-auto">
         <!-- women jacket section -->
-        <section class="py-12">
-            <h3 class="text-3xl font-bebas">Women Jackets</h3>
+        <section class="p-6 md:py-12">
+            <h3 class="text-3xl font-bebas uppercase pb-4">Woman Jackets</h3>
             <!-- jackets container -->
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-7 font-roboto">
                 <!-- jacket 1 -->
@@ -109,6 +121,83 @@
                 <div class="space-y-3 drop-shadow-lg">
                     <div class="bg-[#F1F1F1] p-5 rounded-2xl">
                         <img src="images/jacket-3.png" alt="">
+
+                    </div>
+                    <h4 class="text-2xl font-bold">Yellow Coat Jacket</h4>
+                    <p>Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div class="flex justify-between">
+                        <h3 class="text-4xl font-black text-orange-400">$234</h3>
+                        <button
+                            class="py-4 px-9 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-xl uppercase text-white font-medium">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-6 h-6 inline">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                            </svg>
+                            Buy Now
+                        </button>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <!-- men jacket section -->
+        <section class="p-6 md:py-12">
+            <h3 class="text-3xl font-bebas uppercase pb-4">Men Jackets</h3>
+            <!-- jackets container -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-7 font-roboto">
+                <!-- jacket 1 -->
+                <div class="space-y-3 drop-shadow-lg">
+                    <div class="bg-[#F1F1F1] p-5 rounded-2xl">
+                        <img src="images/jacket-4.png" alt="">
+
+                    </div>
+                    <h4 class="text-2xl font-bold">Yellow Coat Jacket</h4>
+                    <p>Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div class="flex justify-between">
+                        <h3 class="text-4xl font-black text-orange-400">$234</h3>
+                        <button
+                            class="py-4 px-9 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-xl uppercase text-white font-medium">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-6 h-6 inline">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                            </svg>
+                            Buy Now
+                        </button>
+                    </div>
+
+                </div>
+                <!-- jacket 2 -->
+                <div class="space-y-3 drop-shadow-lg">
+                    <div class="bg-[#F1F1F1] p-5 rounded-2xl">
+                        <img src="images/jacket-5.png" alt="">
+
+                    </div>
+                    <h4 class="text-2xl font-bold">Yellow Coat Jacket</h4>
+                    <p>Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div class="flex justify-between">
+                        <h3 class="text-4xl font-black text-orange-400">$234</h3>
+                        <button
+                            class="py-4 px-9 bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-xl uppercase text-white font-medium">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-6 h-6 inline">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                            </svg>
+                            Buy Now
+                        </button>
+                    </div>
+
+                </div>
+                <!-- jacket 3 -->
+                <div class="space-y-3 drop-shadow-lg">
+                    <div class="bg-[#F1F1F1] p-5 rounded-2xl">
+                        <img src="images/jacket-6.png" alt="">
 
                     </div>
                     <h4 class="text-2xl font-bold">Yellow Coat Jacket</h4>
