completed footer section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <header class="bg-[#FFFBF0] py-20 px-4 md:p-32">
+    <header class="bg-[#FFFBF0] py-16 px-4 md:p-32">
         <!-- nav section -->
         <nav class="flex justify-between items-center pb-6">
             <img class="w-72" src="icons/logo.png" alt="">
@@ -220,8 +220,32 @@
             </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="flex flex-col-reverse px-4 md:justify-between md:flex-row md:gap-16 items-center md:px-28 py-16">
+        <div class="space-y-6 mt-12">
+            <div class="flex flex-col md:flex-row items-center gap-4 md:gap-9 text-[#3E3E3E] rounded-2xl shadow-lg px-7 py-5">
+                <img class="size-20" src="icons/house.png" alt="">
+                <div class="text-center md:text-left">
+                    <h4 class="font-roboto text-2xl font-bold">Find the Perfect Fit</h4>
+                    <p>Everybody is different, which is why we
+                        offer styles for every body.</p>
+                </div>
+            </div>
+            <div class="flex flex-col md:flex-row items-center gap-4 md:gap-9 text-[#3E3E3E] rounded-2xl shadow-lg px-7 py-5">
+                <img class="size-20" src="icons/box.png" alt="">
+                <div class="text-center md:text-left">
+                    <h4 class="font-roboto text-2xl font-bold">Free Exchanges</h4>
+                    <p>One of the many reasons you can shop with peace of mind</p>
+                </div>
+            </div>
+            <div class="flex flex-col md:flex-row items-center gap-4 md:gap-9 text-[#3E3E3E] rounded-2xl shadow-lg px-7 py-5">
+                <img class="size-20" src="icons/question.png" alt="">
+                <div class="text-center md:text-left">
+                    <h4 class="font-roboto text-2xl font-bold">Contact Our Seller</h4>
+                    <p>They are here to help you. That's quite literally what we pay for them for.</p>
+                </div>
+            </div>
+        </div>
+        <img class="w-full md:w-1/2" src="images/shopping.png" alt="">
     </footer>
 
 </body>
